[package]
name = "kumquat"
version = "1.0.0"
authors = ["Max Rosoff me@maxrosoff.com", "Matthew Ernst matthew.f.ernst@gmail.com"]
edition = "2018"
description = "A Customizable Rust Based Terminal Editor"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
syntect = "4.4"
